--- a/packages/salesforcedx-utils-vscode/package.json
+++ b/packages/salesforcedx-utils-vscode/package.json
@@ -7,6 +7,8 @@
   "publisher": "salesforce",
   "license": "BSD-3-Clause",
   "categories": ["Other"],
+  "files": ["out"],
+  "main": "./out/src",
   "dependencies": {
     "cross-spawn": "6.0.5",
     "path-exists": "3.0.0",
@@ -42,6 +44,7 @@
     "vscode": "^1.26.0"
   },
   "scripts": {
+    "build:webpack": "webpack --mode production",
     "compile": "tsc -p ./",
     "lint": "tslint --project .",
     "watch": "tsc -watch -p .",
