Changes that make bundling of utils module work for salesforcedx-vscode-core

--- a/packages/salesforcedx-utils-vscode/package.json
+++ b/packages/salesforcedx-utils-vscode/package.json
@@ -7,8 +7,6 @@
   "publisher": "salesforce",
   "license": "BSD-3-Clause",
   "categories": ["Other"],
-  "files": ["out"],
-  "main": "./out/src",
   "dependencies": {
     "cross-spawn": "6.0.5",
     "path-exists": "3.0.0",
@@ -45,7 +43,7 @@
   },
   "scripts": {
     "build:webpack": "webpack --mode production",
-    "compile": "tsc -p ./",
+    "compile": "webpack --mode development",
     "lint": "tslint --project .",
     "watch": "tsc -watch -p .",
     "clean":
